# ut-telegram-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  alembic.ini  app.json  app.py  config.py  faq.yaml  heroku.py  main.py  pdf.yaml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
core/: __init__.py  bot.py  config.py  context.py  db.py  decorator.py  exceptions.py  queue.py  session.py  update.py
core/bot/: __init__.py  bot.py  bp.py
core/handlers/: __init__.py
core/models/: user.py
core/utils/: action.py  helpers.py  inline_query.py
handlers/: README.md  __init__.py
handlers/callbacks/: __init__.py  buku.py  cancel_job.py  close.py  completion.py  content.py  contents.py  course.py  discussion.py  discussions.py  folder.py  forum.py  forums.py  modul.py  module.py  page.py  resource.py  short.py  ticket.py  update_completion.py  url.py  vew_lesson.py
handlers/commands/: __init__.py  about.py  admin.py  cancel.py  courses.py  donasi.py  elearning.py  eula.py  formulir.py  inline_help.py  link.py  registrasi.py  reset.py  reset_token.py  start.py  start_elearning.py
handlers/conversations/: __init__.py  baca.py  buku.py  elearning.py  halaman.py  shortlink.py  ticket.py
handlers/errors/: __init__.py
handlers/inlines/: __init__.py  bahan_ajar.py  pluginfile.py  search.py  ticket.py
handlers/jobs/: __init__.py  baca.py  modul.py
libs/: __init__.py  base.py  config.py  covid.py  parser.py  polr.py  pustaka.py  short_link.py  ticket.py  trackingba.py
libs/bahan_ajar/: __init__.py  bahan_ajar.py  book.py
libs/elearning/: course.py  forum.py  moodle.py  response.py  user.py  utils.py
libs/rbv/: __init__.py  base.py  buku.py  modul.py  page.py  rbv.py  utils.py
libs/rss/: pengumuman.py  rss.py
libs/search/: __init__.py  faq.py  pdf.py  qna.py  search.py
libs/sia/: auth.py  base.py  laporan.py
libs/utils/: format_html.py  helpers.py
migrations/: env.py
migrations/versions/: 2020_09_07_8df0a9a19a5e_initial_user.py  2021_10_19_22be7ca598f1_added_user_data.py  2021_10_19_accf99394c8c_remove_jsontype.py  f84604cb1071_initial_user.py
static/: elearning.html  faq.yaml  index.html
static/resources/: security.txt
templates/: elearning.html
tests/: bahan_ajar_test.py  core_test.py  rbv_test.py  rss_test.py  test_core.py
(+27 files in other folders)
