[tool.poetry]
name = "ut-telegram-bot"
version = "3.3.0"
description = ""
authors = ["Habib Rohman <habibrohman@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^12.8"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
beautifulsoup4 = "^4.9.1"
lxml = "^4.5.2"
pytesseract = "^0.3.5"
dacite = "^1.5.1"
cachetools = "^4.1.1"
fuzzywuzzy = "^0.18.0"
Flask = "^1.1.2"
flask_sqlalchemy = "^2.4.4"
flask_migrate = "^2.5.3"
gunicorn = "^20.0.4"
flask_script = "^2.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
